--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -21,12 +21,16 @@
 }
 
 .thank-you-back-arrow {
-    font-size: 28px; /* Make arrow larger */
+    font-size: 28px; /* Make arrow larger - 此样式不再直接作用于箭头，因为箭头是图片 */
     /* font-weight: bold; */ /* Arrow is not typically bold */
-    color: #000000;
-    cursor: pointer;
+    /* color: #000000; */ /* - 图片有自己的颜色 */
+    cursor: pointer; /* 这个可以保留给 span 容器 */
     margin-right: auto; /* Pushes title to center if flex is used correctly */
+    display: inline-flex; /* 让 span 包裹图片并表现得像内联块 */
+    align-items: center; /* 垂直居中图片 */
 }
+
+/* .thank-you-back-arrow img 或 .common-back-button-img 的样式已在 global.css 定义 */
 
 .thank-you-confirmation-title {
     font-size: 16px; /* "Confirmation of purchase" text - smaller as per image */
